--- a/proyecto1/proyecto1/plantillas/index.html
+++ b/proyecto1/proyecto1/plantillas/index.html
@@ -68,12 +68,13 @@
 	</div>
 
 	<!--Registrarse-->
-	<div class="registrar">
+	<
 		<i>¿No tienes una cuenta?</i>
-		<div class="registrarse-brn">
-			<a href="register.html"><button>REGISTRATE</button></a>
-		</div>
-	</div>
+		<form action="/registro/" method="GET">
+			<input type="submit" value="Registrar">
+		</form>
+	
+
 
 	<!--Pie de pagina-->
 	<footer>
