--- a/proyecto1/proyecto1/plantillas/register.html
+++ b/proyecto1/proyecto1/plantillas/register.html
@@ -7,30 +7,35 @@
 </head>
 <body>
 	<header><h1>Registrate</h1></header>
-	<form>
+
+
+	<form action="/registrarCliente/" method="GET">
+
 		<div class="datos-personales">
-			<input type="text" placeholder="Nombres">
-			<input type="text" placeholder="Apellidos">
-			<input type="tel" placeholder="Telefono celular">
+			<input type="text" placeholder="Nombres" name="nombre">
+			<input type="text" placeholder="Apellidos"name="apellido">
+			<input type="tel" placeholder="Telefono celular"name="telefono">
 			<label for="fecha-nacimiento">Fecha de nacimiento:</label>
 			<input type="date" id="fecha-nacimiento" name="fecha-nacimiento">
 		</div>
 
 		<div class="datos-ubicacion">
-			<input type="text" placeholder="País">
-			<input type="text" placeholder="Ciudad / provincia">
-			<input type="text" placeholder="Dirección">
-			<input type="text" placeholder="Codigo postal">
+			<input type="text" placeholder="País" name="pais">
+			<input type="text" placeholder="Ciudad / provincia"name="ciudad">
+			<input type="text" placeholder="Dirección"name="direccion">
+			<input type="text" placeholder="Codigo postal"name=codigopos>
 		</div>
 
 		<div class="datos-cuenta">
-			<input type="text" placeholder="Usuario">
-			<input type="email" placeholder="Correo">
-			<input type="text" placeholder="Contraseña">
+			<input type="text" placeholder="Usuario"name="usuario">
+			<input type="email" placeholder="Correo"name="correo">
+			<input type="text" placeholder="Contraseña"name="contraseña">
 			<input type="text" placeholder="Confirmar contraseña">
 		</div>
 
 		<input type="submit" value="Enviar y registrarme">
+
 	</form>
+
 </body>
 </html>
