--- a/proyecto1/proyecto1/plantillas/index.html
+++ b/proyecto1/proyecto1/plantillas/index.html
@@ -59,7 +59,7 @@
 	<!--Login-->
 	<div class="login">
 		<h1>INICIAR SESIÓN</h1>
-		<input type="text" placeholder="Nombre de usuario">
+		<input type="text" placeholder="Correo" name=correo>
 		<input type="text" placeholder="Contraseña">
 		<a href="recuperar-contra.html"><i>¿Has olvidado la contraseña?</i></a>
 		<div class="ingresar">
