--- a/proyecto1/proyecto1/plantillas/register.html
+++ b/proyecto1/proyecto1/plantillas/register.html
@@ -30,7 +30,7 @@
 			<input type="text" placeholder="Usuario"name="usuario">
 			<input type="email" placeholder="Correo"name="correo">
 			<input type="text" placeholder="Contraseña"name="contraseña">
-			<input type="text" placeholder="Confirmar contraseña">
+			<input type="text" placeholder="Confirmar contraseña"name="confcontraseña">
 		</div>
 
 		<input type="submit" value="Enviar y registrarme">
