--- a/proyecto1/proyecto1/plantillas/register.html
+++ b/proyecto1/proyecto1/plantillas/register.html
@@ -1,9 +1,10 @@
+{%load static%}
 <!DOCTYPE html>
 <html lang="es">
 <head>
 	<title>Registrarse</title>
 	<meta charset="utf-8">
-	<link rel="icon" href="sad.ico">
+	<link  href="{% static 'lph.ico' %}" rel="icon" >
 </head>
 <body>
 	<header><h1>Registrate</h1></header>
