--- a/proyecto1/proyecto1/plantillas/editar-perfil.html
+++ b/proyecto1/proyecto1/plantillas/editar-perfil.html
@@ -1,20 +1,26 @@
+{%load static%}
 <!DOCTYPE html>
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
+	<link  href="{% static 'lph.ico' %}" rel="icon" >
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Editar Perfil</title>
 </head>
 
 <body>
-	<form>
+	<form action="/editarPerfil/" method="GET">
 		<div class="info-personal">
 			<h1>Cambiar información personal</h1>
-			<input type="text" placeholder="Nombres">
-			<input type="text" placeholder="Nombres">
-			<input type="tel" placeholder="Telefono celular">
+			<input type="text" placeholder="Nombres"name="nombre">
+			<input type="text" placeholder="Apellidos"name="apellido">
+			<input type="tel" placeholder="Telefono celular"name="telefono">
 			<label for="fecha-nacimiento">Fecha de nacimiento:</label>
 			<input type="date" id="fecha-nacimiento" name="fecha-nacimiento">
+			<input type="text" placeholder="País" name="pais">
+			<input type="text" placeholder="Ciudad / provincia"name="ciudad">
+			<input type="text" placeholder="Dirección"name="direccion">
+			<input type="text" placeholder="Codigo postal"name=codigopos>
 		</div>
 		
 		<div class="funciones">
@@ -25,10 +31,13 @@
 
 		<div class="info-perfil">
 			<h1>Cambiar información de perfil</h1>
-			<input type="text" placeholder="Contraseña actual">
-			<input type="text" placeholder="Contraseña nueva">
-			<input type="text" placeholder="Confirmar contraseña nueva">
-			<input type="text" placeholder="Correo electronico">
+			<input type="text" placeholder="Correo actual"name="correoActual">
+			<input type="text" placeholder="Nuevo correo"name="correoNuevo">
+			<input type="text" placeholder="Nombre de usuario"name="usuario">
+			<input type="text" placeholder="Contraseña actual"name="contraseñaActual">
+			<input type="text" placeholder="Contraseña nueva"name="contraseñaNueva">
+			<input type="text" placeholder="Confirmar contraseña nueva"name="confimarContraseña">
+			
 		</div>
 
 		<input type="submit" value="ACTUALIZAR INFORMACIÓN">
