--- a/proyecto1/plantillas/Agregar-libro.html
+++ b/proyecto1/plantillas/Agregar-libro.html
@@ -6,7 +6,8 @@
 	<title>Agrega un libro</title>
 </head>
 <body>
-	<form action="/agregarLibro/" method="GET">
+	<form action="/agregarLibro/" method="GET" enctype="multipart/form-data">
+		{% csrf_token %}
 		<input type="text" placeholder="Titulo" name="Titulo">
 		<input type="text" placeholder="Autor" name="Autor">
 		<input type="text" placeholder="Año de publicación" name="PublicA">
@@ -14,15 +15,15 @@
 		<input type="text" placeholder="Numero de paginas" name="numeropaginas">
 		<input type="text" placeholder="Editorial" name="Editorial">
 		<input type="text" placeholder="Idioma" name="Idioma">
-		<label for="Estado">Estado:</label>
-		<select id="Estado" name="=Estado">
-			<option>Nuevo</option>
-			<option>Usado</option>
-		</select>
+		<input type="text" placeholder="Estado" name="Estado">
 		<label for="fecha-publ">Fecha de publicación:</label>
 		<input type="date" id="fecha-publ" name="fecha-publ">
 		<input type="text" placeholder="Precio" name="Precio">
+		<label for="portada">portada:</label>
+		<input type="FILE" name="portada">
+		<input type="text" placeholder="direccion portada" name="direccionportada">
 		<input type="submit" value="Agregar">
+		
 	</form>
 </body>
 </html>
