--- a/proyecto1/plantillas/busqueda.html
+++ b/proyecto1/plantillas/busqueda.html
@@ -1,16 +1,24 @@
+{%load static%}
 <!DOCTYPE html>
 <html lang="es">
+
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Recuperar contraseña</title>
+	<title>Libreria Los Pollos Hermanos</title>
 	<link  href="{% static '/css/estilos.css' %}" rel="stylesheet" type="text/css">
 	<link  href="{% static 'lph.ico' %}" rel="icon" >
+		
+	</form>
+	
 </head>
 
+
 <body>
-
-	<h1>Recuperar contraseña</h1>
-
+	<div>
+		<h1>Los <b>Pollos</b> Hermanos</h1>
+		<img src="{% static '/temporal/1.jpg' %}">
+	</div>
 </body>
 </html>
