--- a/proyecto1/plantillas/Agregar-libro.html
+++ b/proyecto1/plantillas/Agregar-libro.html
@@ -1,9 +1,12 @@
+{%load static%}
 <!DOCTYPE html>
 <html lang="es">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Agrega un libro</title>
+	<link  href="{% static '/css/estilos.css' %}" rel="stylesheet" type="text/css">
+	<link  href="{% static 'lph.ico' %}" rel="icon" >
 </head>
 <body>
 	<form action="/agregarLibro/" method="GET" enctype="multipart/form-data">
@@ -20,7 +23,7 @@
 		<input type="date" id="fecha-publ" name="fecha-publ">
 		<input type="text" placeholder="Precio" name="Precio">
 		<label for="portada">portada:</label>
-		<input type="FILE" name="portada">
+		<input type="FILE" name="Portada">
 		<input type="text" placeholder="direccion portada" name="direccionportada">
 		<input type="submit" value="Agregar">
 		
