--- a/proyecto1/plantillas/editar-perfil.html
+++ b/proyecto1/plantillas/editar-perfil.html
@@ -3,9 +3,10 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<link  href="{% static 'lph.ico' %}" rel="icon" >
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Editar Perfil</title>
+	<link  href="{% static '/css/estilos.css' %}" rel="stylesheet" type="text/css">
+	<link  href="{% static 'lph.ico' %}" rel="icon" >
 </head>
 
 <body>
