--- a/proyecto1/plantillas/register.html
+++ b/proyecto1/plantillas/register.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Registrarse</title>
 	<meta charset="utf-8">
+	<link  href="{% static '/css/estilos.css' %}" rel="stylesheet" type="text/css">
 	<link  href="{% static 'lph.ico' %}" rel="icon" >
 </head>
 <body>
