--- a/proyecto1/plantillas/index.html
+++ b/proyecto1/plantillas/index.html
@@ -60,7 +60,7 @@
 	<div class="login">
 		<h1>INICIAR SESIÓN</h1>
 		<form action="/iniciarSecion/" method="GET">
-			<input type="text" placeholder="Correo" name="correo">
+			<input type="text" placeholder="Correo" name="correo" value={{mensaje}}>
 			<input type="password" placeholder="Contraseña"name="contraseña">
 			<input type="submit" value="Entrar">
 		</form>
