--- a/proyecto1/plantillas/busqueda.html
+++ b/proyecto1/plantillas/busqueda.html
@@ -18,7 +18,13 @@
 <body>
 	<div>
 		<h1>Los <b>Pollos</b> Hermanos</h1>
+		<img src="{% static '/temporal/0.jpg' %}">
+		<h1>{{autor0}}</h1>
 		<img src="{% static '/temporal/1.jpg' %}">
+		<h1>{{autor1}}</h1>
+		<img src="{% static '/temporal/2.jpg' %}">
+		<img src="{% static '/temporal/3.jpg' %}">
+		<img src="{% static '/temporal/4.jpg' %}">
 	</div>
 </body>
 </html>
