--- a/proyecto1/plantillas/busqueda.html
+++ b/proyecto1/plantillas/busqueda.html
@@ -23,8 +23,11 @@
 		<img src="{% static '/temporal/1.jpg' %}">
 		<h1>{{autor1}}</h1>
 		<img src="{% static '/temporal/2.jpg' %}">
+		<h1>{{autor2}}</h1>
 		<img src="{% static '/temporal/3.jpg' %}">
+		<h1>{{autor3}}</h1>
 		<img src="{% static '/temporal/4.jpg' %}">
+		<h1>{{autor4}}</h1>
 	</div>
 </body>
 </html>
