--- a/proyecto1/plantillas/index.html
+++ b/proyecto1/plantillas/index.html
@@ -56,11 +56,11 @@
 
 	<!--Login-->
 	<div>
-		<h1>INICIAR SESIÓN</h1>
+		<i>INICIAR SESIÓN</i>
 		<form action="/iniciarSecion/" method="GET">
 			<input type="text" placeholder="Correo" name="correo" value={{nombre}}>
-			<input type="password" placeholder="Contraseña"name="contraseña" value={{contra}}>
-			<input type="submit" value="Entrar">
+			<input type="password" placeholder="contraseña" name="contraseña" value={{contra}}>
+			<input  type="submit" value="Entrar"/>	
 		</form>
 	</div>
 
