--- a/proyecto1/plantillas/principal-root.html
+++ b/proyecto1/plantillas/principal-root.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Root Principal</title>
+	<link  href="{% static 'lph.ico' %}" rel="icon" >
 	<form action="/index/" method="GET">
 		<a><input type="submit" value="REGRESAR"></a>
 	</form>
