--- a/proyecto1/plantillas/registro-admin.html
+++ b/proyecto1/plantillas/registro-admin.html
@@ -1,30 +1,80 @@
+{%load static%}
 <!DOCTYPE html>
 <html lang="es">
 <head>
 	<title>Completar registro admin</title>
 	<meta charset="utf-8">
-	<link rel="icon" href="sad.ico">
-	<a href="index.html"><input type="button" value="REGRESAR"></a>
+	<link  href="{% static '/css/estilos.css' %}" rel="stylesheet" type="text/css">
+	<link  href="{% static 'lph.ico' %}" rel="icon" >
+
+	
 </head>
 <body>
-	<header><h1>COMPLETAR REGISTRO ADMIN</h1></header>
-	<form>
-		<div class="datos-personales">
-			<input type="text" placeholder="Nombres">
-			<input type="text" placeholder="Apellidos">
-			<input type="tel" placeholder="Telefono celular">
-			<label for="fecha-nacimiento">Fecha de nacimiento:</label>
-			<input type="date" id="fecha-nacimiento" name="fecha-nacimiento">
+
+	<!--Cabeza-Menu-->
+	<header>
+		<div class="header-content">
+			<div class="logo">
+				<img src="{% static 'lph.ico' %}">
+				<h1>Los <b>Libros</b> Hermanos</h1>
+			</div>
+
+			<div class="menu">
+				<nav>
+					<ul>
+						<li ><a href="#">Información</a></li>
+						<li ><a href="#footer" >Contacto</a></li>
+					</ul>
+				</nav>
+			</div>
+
+		</div>
+	</header>
+
+
+	
+	
+		<div class="datos-completar-registro-admin">
+			<form>
+				<h1>COMPLETAR REGISTRO ADMIN</h1>
+				<input type="text" placeholder="Nombres">
+				<input type="text" placeholder="Apellidos">
+				<input type="tel" placeholder="Telefono celular">
+				<label for="fecha-nacimiento">Fecha de nacimiento:</label>
+				<input type="date" id="fecha-nacimiento" name="fecha-nacimiento">
+			</form>
 		</div>
 
 
-		<div class="datos-cuenta">
-			<input type="email" placeholder="Correo">
-			<input type="text" placeholder="Contraseña nueva">
-			<input type="text" placeholder="Confirmar contraseña">
+		<div class="datos-cuenta-admin-registro">
+			<form>
+				<input type="email" placeholder="Correo">
+				<input type="text" placeholder="Contraseña nueva">
+				<input type="text" placeholder="Confirmar contraseña">
+				<input type="submit" id="boton-enviar-registro-admin"value="Enviar y registrarme">
+			</form>
 		</div>
 
-		<input type="submit" value="Enviar y registrarme">
-	</form>
+		
+	
+
+
+	<div class="botones-volver-adm-comp-perfil">
+		<form>
+			<a href="index.html"><input type="button" value="REGRESAR"></a>
+		</form>
+	</div>
+
+	<footer>
+			<div class="foot">
+				<p id="footer">
+				Nuestros contactos
+				</p>
+				<p>Tel: (+57) 321 6549870</p>
+				<p>Correo: <a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&to=polloshermanoslib@melos.com" target="_BLANK">polloshermanoslib@melos.com</a></p>
+			</div>
+		</footer>
+
+
 </body>
 </html>
