--- a/proyecto1/plantillas/busqueda.html
+++ b/proyecto1/plantillas/busqueda.html
@@ -6,7 +6,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Libreria Los Pollos Hermanos</title>
+	<title>Libreria Los Libros Hermanos</title>
 	<link  href="{% static '/css/estilos.css' %}" rel="stylesheet" type="text/css">
 	<link  href="{% static 'lph.ico' %}" rel="icon" >
 		
@@ -18,7 +18,7 @@
 <body>
 	<div>
 	
-		<h1>Los <b>Pollos</b> Hermanos</h1>
+		<h1>Los <b>libros</b> Hermanos</h1>
 		<img src="{% static '/temporal/0.jpg' %}">
 		<h1>{{autor0}}</h1>
 		<img src="{% static '/temporal/1.jpg' %}">
