--- a/proyecto1/plantillas/editar-perfil-root.html
+++ b/proyecto1/plantillas/editar-perfil-root.html
@@ -1,9 +1,12 @@
+{%load static%}
 <!DOCTYPE html>
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Editar Perfil Root</title>
+	<link  href="{% static '/css/estilos.css' %}" rel="stylesheet" type="text/css">
+	<link  href="{% static 'lph.ico' %}" rel="icon" >
 	<form action="/perfilRoot/" method="GET">
 		<div>
 			<input type="submit" value="REGRESAR">
