--- a/proyecto1/plantillas/principal-admin.html
+++ b/proyecto1/plantillas/principal-admin.html
@@ -41,7 +41,7 @@
 				<form action="/paginaAgregarlibro/" method="GET">
 					<a><input type="submit" value="AGREGAR LIBRO"></a>
 				</form>
-				<form action="/paginaAgregarlibro/" method="GET">
+				<form action="/paginaEditarLibro/" method="GET">
 					<a><input type="submit" value="EDITAR LIBRO"></a>
 				</form>
 				<form action="/paginaAgregarlibro/" method="GET">
@@ -59,11 +59,15 @@
 	
 
 	<div class="botones-volver-editar-perfil-admin1">
-			<a><input type="button" value="REGRESAR"></a>
+		<form action="/index/" method="GET">
+			<a><input type="submit" value="SALIR"></a>
+		</form>
 	</div>
 
 	<div class="botones-volver-editar-perfil-admin2">
-		<a><input type="button" value="EDITAR PERFIL"></a>
+		<form action="/paginaEditarAdmin/" method="GET">
+			<a><input type="submit" value="EDITAR PERFIL"></a>
+		</form>
 	</div>
 	
 
