--- a/proyecto1/plantillas/home-client.html
+++ b/proyecto1/plantillas/home-client.html
@@ -16,7 +16,7 @@
 		<div class="header-content">
 			<div class="logo">
 				<img src="{% static 'lph.ico' %}">
-				<h1>Los <b>Pollos</b> Hermanos</h1>
+				<h1>Los <b>Libros</b> Hermanos</h1>
 			</div>
 
 			<div class="navegador-cliente">
