--- a/proyecto1/plantillas/registro-admin.html
+++ b/proyecto1/plantillas/registro-admin.html
@@ -5,9 +5,7 @@
 	<title>Completar registro admin</title>
 	<meta charset="utf-8">
 	<link  href="{% static '/css/estilos.css' %}" rel="stylesheet" type="text/css">
-	<link  href="{% static 'lph.ico' %}" rel="icon" >
-
-	
+	<link  href="{% static 'lph.ico' %}" rel="icon" >	
 </head>
 <body>
 
@@ -31,8 +29,11 @@
 		</div>
 	</header>
 
-
-	
+	<div class="botones-volver-adm-comp-perfil">
+		<form action="/index/" method="GET">
+			<input type="submit" value="REGRESAR"></a>
+		</form>
+	</div>
 	
 		<div class="datos-completar-registro-admin">
 			<form action="/registroAdmin/" method="GET">
@@ -41,7 +42,7 @@
 				<input type="text" placeholder="Apellidos"name="apellido">
 				<input type="tel" placeholder="Telefono celular"name="telefono">
 				<label for="fecha-nacimiento">Fecha de nacimiento:</label>
-				<input type="date" id="fecha-nacimiento" name="fecha-nacimiento">
+				<input type="date" id="fecha-nacimiento" name="nacimiento">
 				<input type="email" placeholder="Correo"name="correo">
 				<input type="password" placeholder="Contraseña nueva"name="contraseña">
 				<input type="password" placeholder="Confirmar contraseña"name="confcontraseña">
@@ -51,13 +52,6 @@
 
 		
 	
-
-
-	<div class="botones-volver-adm-comp-perfil">
-		<form>
-			<a href="index.html"><input type="button" value="REGRESAR"></a>
-		</form>
-	</div>
 
 	<footer>
 			<div class="foot">
