--- a/proyecto1/plantillas/principal-root.html
+++ b/proyecto1/plantillas/principal-root.html
@@ -39,6 +39,7 @@
 		</div>
 		
 		<div class="creacion-admin">
+			<p><FONT COLOR="red">{{mensaje}}</FONT> </p>
 			<h1>Crear usuario Admin</h1>
 			<form action="/crearAdmin/" method="GET">
 				<input type="text" placeholder="Nombre Usuario"name="nombre">
