--- a/proyecto1/plantillas/register.html
+++ b/proyecto1/plantillas/register.html
@@ -6,6 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link  href="{% static '/css/estilos.css' %}" rel="stylesheet" type="text/css">
 	<link  href="{% static 'lph.ico' %}" rel="icon" >
+
+
+
 	<meta charset="utf-8">
 	
 </head>
@@ -287,7 +290,7 @@
 			<input type="text" placeholder="Confirmar contraseña"name="confcontraseña">
 		</div>
 
-		<input type="submit" value="Enviar y registrarme">
+		<input type="submit" id="enviar-registro" value="Enviar y registrarme">
 
 	</form>
 </div>
