--- a/proyecto1/plantillas/editar-perfil-admin.html
+++ b/proyecto1/plantillas/editar-perfil-admin.html
@@ -31,6 +31,7 @@
 	</header>
 	
 		<div class="info-personal-admin">
+			<p><FONT COLOR="red">{{mensaje}}</FONT> </p>
 			<form action="/editarPerfilAdmin/" method="GET">
 				<h1>EDITAR PERFIL ADMIN</h1>
 				<input type="text" placeholder="Nombres"name="nombre">
