--- a/proyecto1/plantillas/registro-admin.html
+++ b/proyecto1/plantillas/registro-admin.html
@@ -36,6 +36,7 @@
 	</div>
 	
 		<div class="datos-completar-registro-admin">
+			<p><FONT COLOR="red">{{mensaje}}</FONT> </p>
 			<form action="/registroAdmin/" method="GET">
 				<h1>COMPLETAR REGISTRO ADMIN</h1>
 				<input type="text" placeholder="Nombres" name="nombre">
